fix: Make dropdown readable in dark mode

--- a/src/style/content/preferences/av.less
+++ b/src/style/content/preferences/av.less
@@ -46,6 +46,10 @@
   color: var(--background);
   font-size: @font-size-sm;
   outline: none;
+
+  option {
+    color: #323639;
+  }
 }
 
 .preferences-av-select-disabled {
